--- a/action.yml
+++ b/action.yml
@@ -26,6 +26,7 @@ inputs:
 runs:
   using: 'composite'
   steps:
+    - uses: actions/checkout@v4
     - name: Setup Python
       uses: actions/setup-python@v5
       with:
