--- a/action.yml
+++ b/action.yml
@@ -32,12 +32,12 @@ runs:
       with:
         python-version: '3.x'
         architecture: 'x64'
-        # cache: 'pip'
+        cache: 'pip'
     - name: Install dependencies
       shell: bash
       run: |
         python -m pip install --upgrade pip
-        # pip install -r requirements.txt
+        pip install -r ${{ github.action_path }}/requirements.txt
     - name: Pass inputs to shell
       shell: bash
       run: |
@@ -53,4 +53,4 @@ runs:
     - name: Run script
       shell: bash
       run: |
-        python src/main.py
+        python ${{ github.action_path }}/src/main.py
