--- a/action.yml
+++ b/action.yml
@@ -48,4 +48,4 @@ runs:
     - name: Run script
       shell: bash
       run: |
-        python ${{ github.action_path }}/src/main.py
+        python -u ${{ github.action_path }}/src/main.py
