--- a/action.yml
+++ b/action.yml
@@ -7,6 +7,9 @@ branding:
   icon: cloud-rain
 
 inputs:
+  weather-api:
+    description: "OpenWeather API key"
+    required: true
   city-id:
     description: "Numerical ID of the city"
     required: true
@@ -40,11 +43,10 @@ runs:
     - name: Pass inputs to shell
       shell: bash
       run: |
+        echo "INPUT_WEATHER_API=${{ inputs.weather-api }}" >> $GITHUB_ENV
         echo "INPUT_CITY_ID=${{ inputs.city-id }}" >> $GITHUB_ENV
         echo "INPUT_METRIC=${{ inputs.metric }}" >> $GITHUB_ENV
         printf "PATH_README=%s/%s\n" $GITHUB_WORKSPACE ${{ inputs.readme-path }} >> $GITHUB_ENV
-        printf "PATH_README_TEMPLATE=%s/%s\n" $GITHUB_WORKSPACE ${{ inputs.readme-template-path }} >> $GITHUB_ENV
-        echo $GITHUB_ENV
     - name: Run script
       shell: bash
       run: |
