--- a/action.yml
+++ b/action.yml
@@ -39,7 +39,7 @@ runs:
     - name: Pass inputs to shell
       shell: bash
       run: |
-        echo "INPUT_WEATHER_API=${{ inputs.weather-api-key }}" >> $GITHUB_ENV
+        echo "INPUT_WEATHER_API_KEY=${{ inputs.weather-api-key }}" >> $GITHUB_ENV
         echo "INPUT_CITY_ID=${{ inputs.city-id }}" >> $GITHUB_ENV
         echo "INPUT_METRIC=${{ inputs.metric }}" >> $GITHUB_ENV
         printf "PATH_README=%s/%s\n" $GITHUB_WORKSPACE ${{ inputs.readme-path }} >> $GITHUB_ENV
