--- a/action.yml
+++ b/action.yml
@@ -41,7 +41,7 @@ runs:
       run: |
         echo "INPUT_WEATHER_API_KEY=${{ inputs.weather-api-key }}" >> $GITHUB_ENV
         echo "INPUT_CITY_ID=${{ inputs.city-id }}" >> $GITHUB_ENV
-        echo "INPUT_METRIC=${{ inputs.metric }}" >> $GITHUB_ENV
+        echo "INPUT_UNITS=${{ inputs.UNITS }}" >> $GITHUB_ENV
         printf "README_PATH=%s/%s\n" $GITHUB_WORKSPACE ${{ inputs.readme-path }} >> $GITHUB_ENV
     - name: Run script
       shell: bash
