--- a/action.yml
+++ b/action.yml
@@ -51,6 +51,6 @@ runs:
       shell: bash
       run: |
         git config --local user.name "github-actions[bot]"
-        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com
+        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git add ${{ inputs.readme-path }}
         git diff-index --quiet HEAD || (git commit -a -m "Update README.md" --allow-empty)
