--- a/action.yml
+++ b/action.yml
@@ -54,3 +54,4 @@ runs:
         git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git add ${{ inputs.readme-path }}
         git diff-index --quiet HEAD || (git commit -a -m "Update README.md" --allow-empty)
+        git push
