--- a/action.yml
+++ b/action.yml
@@ -53,5 +53,5 @@ runs:
         git config --local user.name "github-actions[bot]"
         git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git add ${{ inputs.readme-path }}
-        git commit -m "Update README.md" --allow-empty)
+        git commit -m "Update README.md" --allow-empty
         git push origin main
