--- a/action.yml
+++ b/action.yml
@@ -54,4 +54,4 @@ runs:
         git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git add ${{ inputs.readme-path }}
         git commit -m "Update README.md" --allow-empty
-        git push -f origin main
+        git push origin main
