--- a/action.yml
+++ b/action.yml
@@ -4,7 +4,7 @@ description: Update your README.md file with the weather of a city
 
 branding:
   color: yellow
-  icon: cloud-rain
+  icon: play
 
 inputs:
   weather-api-key:
