--- a/action.yml
+++ b/action.yml
@@ -37,7 +37,7 @@ runs:
       shell: bash
       run: |
         python -m pip install --upgrade pip
-        pip install -r ${{ github.action_path }}/requirements.txt
+        pip install -r ${{ github.action_path }}/src/requirements.txt
     - name: Pass inputs to shell
       shell: bash
       run: |
